syntax = "proto3";

package edgecluster;

/**
 * The different error types
 */
enum Error {
  // Indicates the operation was successful
  NO_ERROR = 0;
  // Indicates the operation fail with unknown error
  UNKNOWN = 1;
  // Indicates the edge cluster already exists
  EDGE_CLUSTER_ALREADY_EXISTS = 2;
  // Indicates the edge cluster does not exist
  EDGE_CLUSTER_NOT_FOUND = 3;
  // Indicates the provided values for he operation were invalid
  BAD_REQUEST = 4;
}

/**
 * The edge cluster object
 */
message EdgeCluster {
  // The unique tenant identifier that owns the edge cluster
  string tenantID = 1;

  // The edge cluster name
  string name = 2;
}

/**
 * Request to create a new edge cluster
 */
message CreateEdgeClusterRequest {
  // The edge cluster object
  EdgeCluster edgeCluster = 1;
}

/**
 * Response contains the result of creating a new edge cluster
 */
message CreateEdgeClusterResponse {
  // Indicate whether the operation has any error
  Error error = 1;

  // Contains error message if the operation was unsuccessful
  string errorMessage = 2;

  // The unique edge cluster identifier
  string edgeClusterID = 3;

  // The created edge cluster object
  EdgeCluster edgeCluster = 4;
}

/** Request to read an existing edge cluster
 */
message ReadEdgeClusterRequest {
  // The unique edge cluster identifier
  string edgeClusterID = 1;
}

/**
 * Response contains the result of reading an existing edge cluster
 */
message ReadEdgeClusterResponse {
  // Indicate whether the operation has any error
  Error error = 1;

  // Contains error message if the operation was unsuccessful
  string errorMessage = 2;

  // The edge cluster object
  EdgeCluster edgeCluster = 3;
}

/**
 * Request to update an existing edge cluster
 */
message UpdateEdgeClusterRequest {
  // The unique edge cluster identifier
  string edgeClusterID = 1;

  // The edge cluster object contains the updated edge cluster details to update
  EdgeCluster edgeCluster = 2;
}

/**
 * Response contains the result of updating an existing edge cluster
 */
message UpdateEdgeClusterResponse {
  // Indicate whether the operation has any error
  Error error = 1;

  // Contains error message if the operation was unsuccessful
  string errorMessage = 2;

  // The updated edge cluster object
  EdgeCluster edgeCluster = 3;
}

/**
 * Request to delete an existing edge cluster
 */
message DeleteEdgeClusterRequest {
  // The unique edge cluster identifier
  string edgeClusterID = 1;
}

/**
 * Response contains the result of deleting an existing edge cluster
 */
message DeleteEdgeClusterResponse {
  // Indicate whether the operation has any error
  Error error = 1;

  // Contains error message if the operation was unsuccessful
  string errorMessage = 2;
}

/**
 * The pagination information compatible with graphql-relay connection definition, for more information visit:
 * https://facebook.github.io/relay/graphql/connections.htm
 */
 message Pagination {
  string after = 1;

  int32 first = 2;

  string before = 3;

  int32 last = 4;
}

/**
 * The different sorting direction
 */
enum SortingDirection {
  // Indicates result data must be sorted from low to high sequence
  ASCENDING = 0;

  // Indicates result data must be sorted from high to low sequence
  DESCENDING = 1;
}

/**
 * Defines the pair of values that are used to determine how the result data should be sorted.
 */
message SortingOptionPair {
  // The name of the field on
   string name = 1;

   // THe sorting direction
   SortingDirection direction = 2;
}

/**
 * Request to search for edge clusters
 */
message SearchRequest {
  // The pagination information
  Pagination pagination = 1;

  // The collection of sorting option determines how the returned data must be sorted
  repeated SortingOptionPair sortingOptions = 2;

  // The unique edge cluster identifiers
  repeated string edgeClusterIDs = 3;
}

/*
 * The pair of edge cluster and a cursor that defines the position of the edge cluster in the repository
 * that can later referred to using pagination information.
 */
message EdgeClusterWithCursor {
  // The edge cluster object
  EdgeCluster edgecluster = 1;

  // The unique edge cluster identifier
  string edgeClusterID = 2;

  // The cursor defines the position of the edge cluster in the repository that can be later
  // referred to using pagination information
  string cursor = 3;
}

/**
 * Response contains the result of searching for edge clusters
 */
message SearchResponse {
  // Indicate whether the operation has any error
  Error error = 1;

  // Contains error message if the operation was unsuccessful
  string errorMessage = 2;

  // Indicates whether more edges exist prior to the set defined by the clients arguments
  bool hasPreviousPage = 3;

  // Indicates whether more edges exist following the set defined by the clients arguments
  bool hasNextPage = 4;

  // The list contains the edge clusters that matched the search criteria
  repeated EdgeClusterWithCursor edgeClusters = 5;
}

/**
 * The edge cluster servcie that can create new edge cluster, read, update and delete existing edge cluster
 */
service EdgeClusterService {
  // CreateEdgeCluster creates a new edge cluster
  // request: The request to create a new edge cluster
  // Returns the result of creating new edge cluster
  rpc CreateEdgeCluster(CreateEdgeClusterRequest) returns (CreateEdgeClusterResponse);

  // ReadEdgeCluster read an exsiting edge cluster
  // request: The request to read an esiting edge cluster
  // Returns the result of reading an exiting edge cluster
  rpc ReadEdgeCluster(ReadEdgeClusterRequest) returns (ReadEdgeClusterResponse);

  // UpdateEdgeCluster update an exsiting edge cluster
  // request: The request to update an esiting edge cluster
  // Returns the result of updateing an exiting edge cluster
  rpc UpdateEdgeCluster(UpdateEdgeClusterRequest) returns (UpdateEdgeClusterResponse);

  // DeleteEdgeCluster delete an exsiting edge cluster
  // request: The request to delete an esiting edge cluster
  // Returns the result of deleting an exiting edge cluster
  rpc DeleteEdgeCluster(DeleteEdgeClusterRequest) returns (DeleteEdgeClusterResponse);

  // Search returns the list of edge clusters that matched the criteria
  // request: The request contains the search criteria
  // Returns the list of edge clusters that matched the criteria
  rpc Search(SearchRequest) returns (SearchResponse);
}

